--- a/sass/layouts/_sidebar-content.scss
+++ b/sass/layouts/_sidebar-content.scss
@@ -1,6 +1,6 @@
 .site {
 	display: grid;
-	grid-template-columns: ($size__site-sidebar) auto;
+	grid-template-columns: ($size_pixcell_medicalite-sidebar) auto;
 	grid-template-areas:
 		"header header"
 		"sidebar main"
